--- a/ui/src/i18n/locale/en.json
+++ b/ui/src/i18n/locale/en.json
@@ -458,22 +458,22 @@
     "video_filter_info": "Comma-delimited list of additional video filters for FFmpeg to run on the video. If 'none' is included, the default video filters are disabled (-filter:v).",
     "video_processor_config": "Video Prozessor Configuration",
     "video_processor_path": "Video Processor Path",
-    "video_resolution": "Video Resolution",
+    "video_resolution": "Resolución del Video",
     "videoanalysis": "Videoanalysis",
     "videoanalysis_info": "Activates Video Analysis for motion detection (a low resolution sub stream is preferred or prebuffering enabled)",
-    "warning": "Warning",
-    "weather": "Weather",
-    "weather_widget_info": "Please search for your city name in English to activate the weather widget.",
+    "warning": "Aviso",
+    "weather": "Clima",
+    "weather_widget_info": "Por favor busque el nombre de su ciudad en Inglés para activar el widget del clima.",
     "weather_widget_info_owm": "Weather data is provided by OpenWeather.",
     "webhook": "Webhook",
     "webhook_url": "Webhook URL",
-    "wednesday": "Wednesday",
-    "welcome_back": "Welcome back",
-    "welcome_message": "Welcome to",
+    "wednesday": "Miércoles",
+    "welcome_back": "Bienvenido de nuevo",
+    "welcome_message": "Bienvenido a",
     "welcome_submessage": "The web interface for your RTSP capable cameras",
     "widgets": "Widgets",
     "width": "Video Width",
     "width_info": "The width used for video stream.",
-    "yellow": "Yellow"
+    "yellow": "Amarillo"
   }
 }
