--- a/ui/src/i18n/locale/es.json
+++ b/ui/src/i18n/locale/es.json
@@ -240,15 +240,15 @@
     "movement_on": "Movement on",
     "mqtt": "MQTT",
     "mqtt_config": "MQTT Configuration",
-    "name": "Name",
-    "never": "Never",
-    "new": "New",
-    "new_content_available": "New content is available",
-    "new_password": "New password",
-    "new_password_verify": "Verify new password",
-    "new_room": "New Room",
-    "new_zone": "New Zone",
-    "next": "Next",
+    "name": "Nombre",
+    "never": "Nunca",
+    "new": "Nuevo",
+    "new_content_available": "Nuevo contenido disponible",
+    "new_password": "Nueva contraseña",
+    "new_password_verify": "Verificar nueva contraseña",
+    "new_room": "Nueva Habitación",
+    "new_zone": "Nueva Zona",
+    "next": "Siguiente",
     "no_access": "No access permission",
     "no_camera_selected": "No Camera selected",
     "no_cameras": "No cameras",
@@ -266,27 +266,27 @@
     "no_permissionlevel_defined": "No permission level defined",
     "no_recordings": "No recordings",
     "no_registered_user": "No registered user",
-    "no_results": "No results",
+    "no_results": "No se encontraron resultados",
     "no_roomname_defined": "No room name defined",
-    "no_title": "No Title",
+    "no_title": "Sin Título",
     "no_username_defined": "No username defined",
     "notfound_message": "Sorry, the page you're looking for doesn't exist.",
-    "notification": "Notification",
+    "notification": "Notificación",
     "notification_text": "@ detected a new movement in room %",
-    "notifications": "Notifications",
+    "notifications": "Notificaciones",
     "notifications_nav_info": "Manage the Alexa, Telegram and Webhook settings",
-    "november": "November",
-    "now": "Now",
+    "november": "Noviembre",
+    "now": "Ahora",
     "npm": "NPM",
-    "october": "October",
+    "october": "Octubre",
     "offline": "Offline",
     "ok": "Ok",
-    "old_password": "Old Password",
+    "old_password": "Contraseña Antigua",
     "online": "Online",
-    "options": "Options",
-    "orange": "Orange",
+    "options": "Opciones",
+    "orange": "Naranja",
     "page_not_found": "The page you requested could not be found.",
-    "password": "Password",
+    "password": "Contraseña",
     "password_is_required": "Password is required",
     "password_not_match": "Password does not match",
     "password_reenter": "Reenter password",
@@ -297,91 +297,91 @@
     "permission_required": "Permission required",
     "permissions": "Permissions",
     "ping_timeout": "Ping Timeout",
-    "pink": "Pink",
+    "pink": "Rosa",
     "pixel_difference": "Pixel/Color Difference",
     "pixel_difference_info": "The color difference required to trigger motion on a pixel (the smaller the value the smaller the color difference and the larger the value the larger the color difference needed to register it as movement)",
-    "port": "Port",
+    "port": "Puerto",
     "prebuffering": "Prebuffering",
     "prebuffering_info": "Enables camera video prebuffering.",
-    "press_enter_to_create": "Press %Enter% to create a new label",
-    "prev": "Previous",
+    "press_enter_to_create": "Presiona %Enter% para crear una nueva etiqueta",
+    "prev": "Anterior",
     "privacyMode_info": "Turn off the camera feed and replace it with a privacy image in HomeKit",
     "privacySwitch_info": "Exposes a 'privacyMode' switch to replace the camera feed with a privacy image in HomeKit",
     "probe_size": "Probe Size",
     "probe_size_info": "Set probing size in bytes, i.e. the size of the data to analyze to get stream information. A higher value will enable detecting more information in case it is dispersed into the stream, but will increase latency. Must be an integer not lesser than 32. It is 5000000 by default (-probesize).",
     "process": "Process",
-    "profile": "Profile",
-    "purple": "Purple",
+    "profile": "Perfil",
+    "purple": "Púrpura",
     "read_rate": "Read Rate",
     "read_rate_info": "Read input at native frame rate (-re).",
-    "reconnect": "Reconnect",
+    "reconnect": "Reconectar",
     "record_on_movement": "Record on movement through UI",
     "record_on_movement_info": "Enables recording video (eg on movement) through UI and NOT through external controller.",
-    "recording": "Recording",
+    "recording": "Grabando",
     "recording_text": "The @ was taken on % by a #.",
     "recording_time": "Recording time",
     "recording_timer_not_editable": "Recording time cannot be edited. Settings can be changed in config.json.",
     "recording_type": "Recording type",
     "recording_type_not_editable": "Recording type cannot be edited. Settings can be changed in config.json.",
-    "recordings": "Recordings",
+    "recordings": "Grabaciones",
     "recordings_nav_info": "Manage the recording settings and specify the recording type",
     "refresh": "Reresh",
     "registered_user": "Registered User",
     "rekognition": "Rekognition",
     "rekognition_nav_info": "Image analysis for motion detection via Amazon Rekognition",
-    "release_notes": "Release Notes",
-    "reload": "Reload",
-    "remove": "Remove",
-    "remove_after": "Remove after",
-    "remove_all": "Remove all",
-    "remove_all_confirm": "Confirm remove all",
-    "remove_all_confirm_text": "After clicking 'Remove all' all stored @ will be irrevocably deleted. Are you sure?",
-    "remove_camera": "Remove Camera",
-    "remove_camera_confirm_text": "Do you really want to delete the camera '@'?",
+    "release_notes": "Notas de la Versión",
+    "reload": "Recargar",
+    "remove": "Eliminar",
+    "remove_after": "Eliminar después",
+    "remove_all": "Eliminar todo",
+    "remove_all_confirm": "Confirmar eliminar todo",
+    "remove_all_confirm_text": "Después de presionar 'Eliminar todo' all stored @ will be irrevocably deleted. ¿Estás seguro?",
+    "remove_camera": "Eliminar Cámara",
+    "remove_camera_confirm_text": "¿Realmente deseas eliminar la cámara '@'?",
     "remove_camera_confirm_text_homebridge": "Do you really want to delete the camera '@'? This will also remove the camera from Homebridge!",
-    "removed": "removed",
+    "removed": "eliminado",
     "reorder_queue_size": "Reorder Queue Size",
     "reorder_queue_size_info": "Packets may be received out of order, so before they can be passed onwards, they need to be reordered. Default jitter buffer size is 500. This option allows you to specify it manually. Higher values will lead to greater latency. Only applicable for reception over UDP (-reorder_queue_size).",
-    "reports": "Reports",
+    "reports": "Reportes",
     "reset": "Reset",
     "reset_confirm": "Confirm reset",
     "reset_confirm_text": "After clicking 'Reset' all stored data will be irrevocably deleted. Are you sure?",
-    "restart": "Restart",
-    "restart_cameraui": "Please restart camera.ui",
-    "restart_confirm": "Confirm restart",
+    "restart": "Reiniciar",
+    "restart_cameraui": "Por favor reinicie camera.ui",
+    "restart_confirm": "Confirmar reinicio",
     "restart_confirm_text": "Do you really want to reboot @?",
-    "restore": "Restore",
+    "restore": "Restaurar",
     "restore_from_backup_file": "Restore from Backup Archive",
-    "room": "Room",
+    "room": "Habitación",
     "room_already_exists": "Room already exists",
-    "room_name": "Room Name",
-    "rooms": "Rooms",
+    "room_name": "Nombre de la habitación",
+    "rooms": "Habitaciones",
     "rss": "RSS",
     "rss_feed": "RSS Feed",
     "rss_feed_widget_info": "Please enter a valid RSS URL to see the feed in the widget.",
-    "rss_url": "RSS URL",
+    "rss_url": "URL de RSS",
     "rtsp_transport": "RTSP Transport",
     "rtsp_transport_info": "Set RTSP transport protocols (-rtsp_transport).",
-    "saturday": "Saturday",
-    "save": "Save",
-    "save_as": "Save as",
+    "saturday": "Sábado",
+    "save": "Guardar",
+    "save_as": "Guardar como",
     "save_path": "Save Pfad",
-    "seconds": "Seconds",
-    "select": "Select",
-    "selected": "selected",
-    "selected_camera": "Selected Camera",
-    "sensitivity": "Sensivity",
+    "seconds": "Segundos",
+    "select": "Seleccionar",
+    "selected": "seleccionado",
+    "selected_camera": "Cámara Seleccionada",
+    "sensitivity": "Sensibilidad",
     "sensitivity_info": "The percentage of pixels (see Differnce) required to trigger a movement (a low sensitivity means that more pixel differences have to be detected, a high sensitivity means that less pixel differences have to be detected)",
-    "september": "September",
-    "serialNr": "Serial number",
-    "serialNumber_info": "Set the serial number for display in the Home app",
-    "server": "Server",
-    "server_information": "Server Information",
-    "settings": "Settings",
+    "september": "Septiembre",
+    "serialNr": "Número de serie",
+    "serialNumber_info": "Ingresa el número de serie para mostrar en la aplicación Casa",
+    "server": "Servidor",
+    "server_information": "Información del Servidor",
+    "settings": "Configuración",
     "shortcuts": "Shortcuts",
     "shortcuts_widget_info": "Please select the action from the list to show it in the shortcuts.",
-    "signin": "Sign in",
-    "signout": "Sign out",
+    "signin": "Acceder",
+    "signout": "Salir",
     "signout_after": "Sign out after",
     "smtp": "SMTP",
     "smtp_server_config": "SMTP Server Configuration",
@@ -393,15 +393,15 @@
     "speaker_end_time": "Speaker end time",
     "speaker_start_time": "Speaker start time",
     "ssl": "SSL",
-    "ssl_config": "SSL Configuration",
+    "ssl_config": "Configuración SSL",
     "standard": "Standard",
-    "start": "Start",
-    "start_end_message": "And thats it. <br> Have fun with camera.ui!",
-    "start_info_message": "You must change your credentials <br> before logging in to camera.ui",
-    "status": "State",
+    "start": "Iniciar",
+    "start_end_message": "Y eso es todo. <br> ¡Disfruta de camera.ui!",
+    "start_info_message": "Debes cambiar tus credenciales<br> antes de acceder a camera.ui",
+    "status": "Estado",
     "still_image_source": "Image Source",
     "still_image_source_info": "If your camera also provides a URL for a still image, that can be defined here with the same syntax as 'source'. If not set, camera.ui will grab one frame from 'source'.",
-    "stop": "Stop",
+    "stop": "Detener",
     "stream_timeout": "Stream Timeout",
     "sub_source_info": "Low Resolution Substream. FFmpeg options on where to find and how to decode your camera's video substream. The most basic form is '-i' followed by your camera's URL. The substream will be used to probe the stream or for motion detection through video analysis.",
     "successfull": "Successfull",
@@ -409,48 +409,48 @@
     "successfully_changed": "Successfully changed",
     "successfully_created": "Successfully created",
     "successfully_removed": "Successfully removed",
-    "sunday": "Sunday",
-    "sunny": "Sunny",
-    "system": "System",
+    "sunday": "Domingo",
+    "sunny": "Soleado",
+    "system": "Sistema",
     "system_nav_info": "Manage the backend settings of camera.ui",
     "system_restart_initiated": "System restart was initiated",
-    "system_successfully_restarted": "System was successfully restarted",
-    "system_successfully_updated": "System was successfully updated",
+    "system_successfully_restarted": "El sistema se reinició exitosamente",
+    "system_successfully_updated": "El sistema se actualizó exitosamente",
     "system_update_initiated": "System update was initiated",
     "telegram": "Telegram",
     "telegram_message_type": "Telegram Message Type",
     "telegram_type_not_editable": "Telegram cannot be changed for this camera.",
-    "temperature": "Temperature",
-    "text": "Text",
-    "theme": "Theme",
-    "themes": "Themes",
-    "thursday": "Thursday",
-    "time": "Time",
+    "temperature": "Temperatura",
+    "text": "Texto",
+    "theme": "Tema",
+    "themes": "Temas",
+    "thursday": "Jueves",
+    "time": "Tiempo",
     "timeout": "Timeout",
     "timeout_info": "Socket TCP I/O timeout in seconds. If you have problems with hanging FFmpeg processes in the background, you can enter any value here to stop the process automatically after the entered time, if no response comes (-stimeout).",
     "timestamp": "Timestamp",
-    "tuesday": "Tuesday",
+    "tuesday": "Martes",
     "typ": "Typ",
     "unbridge_info": "Bridged cameras can cause slowdowns of the entire Homebridge instance. If unbridged, the camera will need to be added to HomeKit manually.",
-    "undo": "Undo",
+    "undo": "Deshacer",
     "up_to_date": "Up to date",
-    "update": "Update",
-    "update_available": "Update available",
+    "update": "Actualizar",
+    "update_available": "Actualización disponible",
     "update_or_downgrade": "Update/Downgrade",
     "upload_backup_archive": "Upload Backup Archive",
     "uptime": "Uptime",
     "use_interface_timer": "Interface Recording Timer",
     "use_interface_timer_info": "If enabled, the recording timer from camera.ui will be used for \"motionTimeout\".",
-    "user": "User",
+    "user": "Usuario",
     "user_list": "User List",
-    "username": "Username",
-    "username_already_exists": "Username already exist",
-    "username_is_required": "Username is required",
-    "users": "Users",
-    "users_nav_info": "Delete existing users or create new ones",
+    "username": "Nombre de usuario",
+    "username_already_exists": "Este nombre de usuario ya existe",
+    "username_is_required": "Se requiere un nombre de usuario",
+    "users": "Usuarios",
+    "users_nav_info": "Eliminar usuarios existentes o crear nuevos",
     "utilization": "Utilization",
     "verification_not_successfull": "Verification not successfull",
-    "version": "Version",
+    "version": "Versión",
     "video": "Video",
     "video_codec": "Video Codec",
     "video_codec_info": "Set the codec used for encoding video sent to HomeKit, must be H.264-based. You can change to a hardware accelerated video codec with this option, if one is available (-vcodec).",
@@ -461,16 +461,16 @@
     "video_resolution": "Video Resolution",
     "videoanalysis": "Videoanalysis",
     "videoanalysis_info": "Activates Video Analysis for motion detection (a low resolution sub stream is preferred or prebuffering enabled)",
-    "warning": "Advertencia",
+    "warning": "Aviso",
     "weather": "Clima",
-    "weather_widget_info": "Please search for your city name in English to activate the weather widget.",
+    "weather_widget_info": "Por favor, busca el nombre de tu ciudad en Inglés para activar el widget del clima.",
     "weather_widget_info_owm": "La información del clima es proporcionada por OpenWeather.",
     "webhook": "Webhook",
-    "webhook_url": "Webhook URL",
+    "webhook_url": "URL del Webhook",
     "wednesday": "Miércoles",
     "welcome_back": "Bienvenido de nuevo",
     "welcome_message": "Bienvenido a",
-    "welcome_submessage": "La interfaz web para sus cámaras con soporte para RTSP",
+    "welcome_submessage": "La interfaz web para tus cámaras con soporte para RTSP",
     "widgets": "Widgets",
     "width": "Video Width",
     "width_info": "The width used for video stream.",
