--- a/ui/src/i18n/locale/es.json
+++ b/ui/src/i18n/locale/es.json
@@ -81,18 +81,18 @@
     "camera_rekognition_info": "Image analysis on movement detection",
     "camera_settings_save_info": "Fields marked with (¹) can be saved only by clicking the \"Save\" button",
     "camera_videoanalysis_info": "camera.ui Motion detection system",
-    "cameras": "Cameras",
+    "cameras": "Cámaras",
     "cameras_nav_info": "Manage the streaming parameters of the cameras",
     "cameras_to_exclude_from_athome": "Cameras to exclude from 'At Home'",
     "camview": "Camview",
-    "cancel": "Cancel",
+    "cancel": "Cancelar",
     "cannot_change_pw": "Can not change password",
     "cannot_login": "Usuario y/o contraseña incorrecto",
     "change": "Cambiar",
     "change_your_password": "Cambiar su contraseña",
     "charts": "Charts",
     "clear": "Clear",
-    "close": "Close",
+    "close": "Cerrar",
     "color": "Color",
     "confidence": "Confidence",
     "config": "Config",
@@ -145,7 +145,7 @@
     "favourite": "Favorito",
     "favourites": "Favoritos",
     "february": "Febrero",
-    "ffmpeg_and_stream": "FFmpeg and Stream",
+    "ffmpeg_and_stream": "FFmpeg y Stream",
     "field_must_not_be_empty": "El campo no puede estar vacío",
     "fill_all_required_fields": "Por favor rellene todos los campos requeridos",
     "filters": "Filtros",
@@ -154,19 +154,19 @@
     "forceClose_timer": "Reset motion after",
     "forceClose_timer_info": "Timer in minutes that automatically interrupts (resets) the constant detection of motion after N minutes. 0 = Disabled. Attention: If the timer is deactivated, it is up to the camera WHEN the motion detection is considered \"finished\" and thus the recording is stopped. This can lead to very long recordings!",
     "forgotpw_content": "If you have forgotten your password, you can restore it by deleting the database or importing a backup.",
-    "forgotpw_title": "Forgot password?",
+    "forgotpw_title": "¿Contraseña Olvidada?",
     "fps": "FPS",
     "fps_info": "The fps used for video stream.",
-    "friday": "Friday",
+    "friday": "Viernes",
     "ftp": "FTP",
     "ftp_absolute_path": "FTP Absolute Path",
     "ftp_server_config": "FTP Server Configuration",
     "fullscreen": "Fullscreen",
     "general": "General",
-    "general_information": "General Information",
-    "general_settings": "General Settings",
+    "general_information": "Información General",
+    "general_settings": "Configuración General",
     "go_back": "Back",
-    "gray": "Gray",
+    "gray": "Gris",
     "green": "Green",
     "height": "Video Height",
     "height_info": "The height used for video stream.",
@@ -176,17 +176,17 @@
     "hour": "Hora",
     "hours": "Horas",
     "http": "HTTP",
-    "http_server_config": "HTTP Server Configuration",
+    "http_server_config": "Configuración del Servidor HTTP",
     "image": "Imagen",
     "inactive": "Inactivo",
     "interface": "Interface",
-    "interface_appearance": "Interface Appearance",
-    "interface_config": "Interface Configuration",
-    "interface_language": "Interface Language",
+    "interface_appearance": "Apariencia de la Interfaz",
+    "interface_config": "Configuración de la Interfaz",
+    "interface_language": "Idioma de la Interfaz",
     "interface_nav_info": "Create new rooms or make other settings",
     "interface_player": "Interface Player",
-    "invalid_password": "Invalid Password",
-    "invalid_username": "Invalid Username",
+    "invalid_password": "Contraseña No Válida",
+    "invalid_username": "Nombre de Usuario No Válido",
     "january": "Enero",
     "july": "Julio",
     "june": "Junio",
@@ -197,7 +197,7 @@
     "lang_german": "German",
     "language": "Idioma",
     "last_notification": "Última notificación",
-    "last_recording": "Last recording",
+    "last_recording": "Última Grabación",
     "last_updated": "Last Updated",
     "light": "Light",
     "list_of_existing_user": "List of registered user",
@@ -209,26 +209,26 @@
     "location": "Location",
     "log": "Log",
     "login": "Login",
-    "manufacturer_info": "Set the manufacturer name for display in the Home app",
+    "manufacturer_info": "Ingresa el nombre del fabricante para mostrar en la aplicación Casa",
     "map_audio": "Audio Stream",
     "map_audio_info": "Selects the stream used for audio (-map).",
     "map_video": "Video Stream",
     "map_video_info": "Selects the stream used for video (-map).",
-    "march": "March",
-    "mark_all_as_read": "Mark All as Read",
+    "march": "Marzo",
+    "mark_all_as_read": "Marcar Todo Como Leído",
     "master": "Master",
     "max_delay": "Max Delay",
     "max_delay_info": "When receiving data over UDP, the demuxer tries to reorder received packets (since they may arrive out of order, or packets may get lost totally). This can be disabled by setting the maximum demuxing delay to zero (-max_delay).",
     "max_streams": "Max Streams",
     "max_streams_info": "The maximum number of streams that will be allowed at once to this camera.",
-    "may": "May",
-    "memory": "Memory",
+    "may": "Mayo",
+    "memory": "Memoria",
     "memory_load": "Memory Load",
-    "message": "Message",
-    "mode": "Mode",
-    "model_info": "Set the model for display in the Home app",
-    "monday": "Monday",
-    "motion": "Motion",
+    "message": "Mensaje",
+    "mode": "Modo",
+    "model_info": "Ingresa el modelo para mostrar en la aplicación Casa",
+    "monday": "Lunes",
+    "motion": "Movimiento",
     "motionDoorbellSwitch_info": "Enables dummy switches to trigger motion and/or doorbell, if either of those are enabled. When enabled there will be an additional switch that triggers the motion or doorbell event.",
     "motionDoorbell_info": "Rings the doorbell when motion is activated. This allows for motion alerts to appear on Apple TVs.",
     "motionSensor_info": "Exposes the motion sensor for this camera. This can be triggered with the dummy switches, MQTT messages, or via HTTP, depending on what features are enabled in the config.",
@@ -236,10 +236,10 @@
     "motion_reset": "No Motion",
     "motion_timeout": "Motion Timeout",
     "motion_timeout_info": "The number of seconds after triggering to reset the motion sensor. Set to 0 to disable resetting of motion trigger.",
-    "movement_detected": "Movement detected",
+    "movement_detected": "Movimiento detectado",
     "movement_on": "Movement on",
     "mqtt": "MQTT",
-    "mqtt_config": "MQTT Configuration",
+    "mqtt_config": "Configuración de MQTT",
     "name": "Nombre",
     "never": "Nunca",
     "new": "Nuevo",
@@ -309,7 +309,7 @@
     "privacySwitch_info": "Exposes a 'privacyMode' switch to replace the camera feed with a privacy image in HomeKit",
     "probe_size": "Probe Size",
     "probe_size_info": "Set probing size in bytes, i.e. the size of the data to analyze to get stream information. A higher value will enable detecting more information in case it is dispersed into the stream, but will increase latency. Must be an integer not lesser than 32. It is 5000000 by default (-probesize).",
-    "process": "Process",
+    "process": "Proceso",
     "profile": "Perfil",
     "purple": "Púrpura",
     "read_rate": "Read Rate",
@@ -384,7 +384,7 @@
     "signout": "Salir",
     "signout_after": "Sign out after",
     "smtp": "SMTP",
-    "smtp_server_config": "SMTP Server Configuration",
+    "smtp_server_config": "Configuración del Servidor SMTP",
     "snapshot": "Snapshot",
     "snapshot_timer": "Snapshot Timer",
     "source": "Video Source",
