--- a/ui/src/i18n/locale/es.json
+++ b/ui/src/i18n/locale/es.json
@@ -22,7 +22,7 @@
     "amazon_rekognition": "Amazon Rekognition",
     "analyze_duration": "Analyze Duration",
     "analyze_duration_info": "Specify how many microseconds are analyzed to probe the input. A higher value will enable detecting more accurate information, but will increase latency. It defaults to 5,000,000 microseconds = 5 seconds (-analyzeduration).",
-    "appearance": "Appearance",
+    "appearance": "Apariencia",
     "appearance_nav_info": "Cambiar el idioma o la apariencia de la interfaz",
     "apply": "Aplicar",
     "april": "Abril",
@@ -91,7 +91,7 @@
     "change": "Cambiar",
     "change_your_password": "Cambiar su contraseña",
     "charts": "Charts",
-    "clear": "Clear",
+    "clear": "Limpiar",
     "close": "Cerrar",
     "color": "Color",
     "confidence": "Confidence",
@@ -102,7 +102,7 @@
     "cpu_load": "Carga del CPU",
     "cpu_temperature": "Temperatura del CPU",
     "create_zipped_backup_file": "Crear una copia de seguridad comprimida en .zip",
-    "custom": "Custom",
+    "custom": "Personalizado",
     "dark": "Oscuro",
     "darkmode": "Modo Oscuro",
     "dashboard": "Panel de Control",
@@ -161,13 +161,13 @@
     "ftp": "FTP",
     "ftp_absolute_path": "FTP Absolute Path",
     "ftp_server_config": "FTP Server Configuration",
-    "fullscreen": "Fullscreen",
+    "fullscreen": "Pantalla Completa",
     "general": "General",
     "general_information": "Información General",
     "general_settings": "Configuración General",
-    "go_back": "Back",
+    "go_back": "Regresar",
     "gray": "Gris",
-    "green": "Green",
+    "green": "Verde",
     "height": "Video Height",
     "height_info": "The height used for video stream.",
     "help_started": "To help you get started and provide good experience with camera.ui, please complete the following configuration.",
@@ -198,7 +198,7 @@
     "language": "Idioma",
     "last_notification": "Última notificación",
     "last_recording": "Última Grabación",
-    "last_updated": "Last Updated",
+    "last_updated": "Última Vez Actualizado",
     "light": "Light",
     "list_of_existing_user": "List of registered user",
     "livestream": "Livestream",
@@ -208,7 +208,7 @@
     "localhttp": "Local HTTP",
     "location": "Location",
     "log": "Log",
-    "login": "Login",
+    "login": "Acceder",
     "manufacturer_info": "Ingresa el nombre del fabricante para mostrar en la aplicación Casa",
     "map_audio": "Audio Stream",
     "map_audio_info": "Selects the stream used for audio (-map).",
@@ -223,7 +223,7 @@
     "max_streams_info": "The maximum number of streams that will be allowed at once to this camera.",
     "may": "Mayo",
     "memory": "Memoria",
-    "memory_load": "Memory Load",
+    "memory_load": "Memoria Utilizada",
     "message": "Mensaje",
     "mode": "Modo",
     "model_info": "Ingresa el modelo para mostrar en la aplicación Casa",
