--- a/ui/src/i18n/locale/es.json
+++ b/ui/src/i18n/locale/es.json
@@ -195,6 +195,7 @@
     "lang_dutch": "Dutch",
     "lang_english": "English",
     "lang_german": "German",
+    "lang_spanish": "Español",
     "language": "Idioma",
     "last_notification": "Última notificación",
     "last_recording": "Última Grabación",
