--- a/ui/src/i18n/locale/nl.json
+++ b/ui/src/i18n/locale/nl.json
@@ -195,6 +195,7 @@
     "lang_dutch": "Nederlands",
     "lang_english": "Engels",
     "lang_german": "Duits",
+    "lang_spanish": "Spanish",
     "language": "Taal",
     "last_notification": "Laatste kennisgeving",
     "last_recording": "Laatste opname",
