--- a/ui/src/i18n/locale/en.json
+++ b/ui/src/i18n/locale/en.json
@@ -195,6 +195,7 @@
     "lang_dutch": "Dutch",
     "lang_english": "English",
     "lang_german": "German",
+    "lang_spanish": "Spanish",
     "language": "Language",
     "last_notification": "Last notification",
     "last_recording": "Last recording",
