--- a/ui/src/i18n/locale/de.json
+++ b/ui/src/i18n/locale/de.json
@@ -196,6 +196,7 @@
     "lang_dutch": "Niederländisch",
     "lang_english": "Englisch",
     "lang_german": "Deutsch",
+    "lang_spanish": "Spanish",
     "language": "Sprache",
     "last_notification": "Letzte Benachrichtigung",
     "last_recording": "Letzte Aufnahme",
