--- a/ui/src/i18n/locale/es.json
+++ b/ui/src/i18n/locale/es.json
@@ -179,7 +179,7 @@
     "http_server_config": "Configuración del Servidor HTTP",
     "image": "Imagen",
     "inactive": "Inactivo",
-    "interface": "Interface",
+    "interface": "Interfaz",
     "interface_appearance": "Apariencia de la Interfaz",
     "interface_config": "Configuración de la Interfaz",
     "interface_language": "Idioma de la Interfaz",
@@ -192,16 +192,16 @@
     "june": "Junio",
     "label": "Etiqueta",
     "labels": "Etiquetas",
-    "lang_dutch": "Dutch",
-    "lang_english": "English",
-    "lang_german": "German",
+    "lang_dutch": "Neerlandés",
+    "lang_english": "Inglés",
+    "lang_german": "Alemán",
     "lang_spanish": "Español",
     "language": "Idioma",
     "last_notification": "Última notificación",
     "last_recording": "Última Grabación",
     "last_updated": "Última Vez Actualizado",
     "light": "Light",
-    "list_of_existing_user": "List of registered user",
+    "list_of_existing_user": "Lista de usuarios registrados",
     "livestream": "Livestream",
     "livestream_snapshot": "Switches between live stream or snapshot interval",
     "load": "Load",
@@ -250,30 +250,30 @@
     "new_room": "Nueva Habitación",
     "new_zone": "Nueva Zona",
     "next": "Siguiente",
-    "no_access": "No access permission",
+    "no_access": "Sin permiso de acceso",
     "no_camera_selected": "No Camera selected",
     "no_cameras": "No cameras",
     "no_data_available": "No data available",
     "no_feed": "No Feed",
     "no_file_selected": "No file selected",
-    "no_label": "No Label",
+    "no_label": "Sin Etiqueta",
     "no_label_matching": "No label found for",
     "no_more_cameras": "No more cameras",
     "no_more_data": "No more data",
     "no_more_notifications": "No more notifications",
     "no_more_recordings": "No more recordings",
-    "no_notifications": "No notifications",
+    "no_notifications": "Sin notificaciones",
     "no_password_defined": "No password defined",
     "no_permissionlevel_defined": "No permission level defined",
-    "no_recordings": "No recordings",
-    "no_registered_user": "No registered user",
+    "no_recordings": "Sin grabaciones",
+    "no_registered_user": "Usuario no registrado",
     "no_results": "No se encontraron resultados",
-    "no_roomname_defined": "No room name defined",
+    "no_roomname_defined": "No se indicó un hombre de habitación",
     "no_title": "Sin Título",
-    "no_username_defined": "No username defined",
-    "notfound_message": "Sorry, the page you're looking for doesn't exist.",
+    "no_username_defined": "No se indicó un nombre de usuario",
+    "notfound_message": "Lo siento, la página que estás buscando no existe.",
     "notification": "Notificación",
-    "notification_text": "@ detected a new movement in room %",
+    "notification_text": "@ detectó un nuevo moviento en la habitación %",
     "notifications": "Notificaciones",
     "notifications_nav_info": "Manage the Alexa, Telegram and Webhook settings",
     "november": "Noviembre",
@@ -350,11 +350,11 @@
     "restart": "Reiniciar",
     "restart_cameraui": "Por favor reinicie camera.ui",
     "restart_confirm": "Confirmar reinicio",
-    "restart_confirm_text": "Do you really want to reboot @?",
+    "restart_confirm_text": "¿Realmente deseas reiniciar @?",
     "restore": "Restaurar",
-    "restore_from_backup_file": "Restore from Backup Archive",
+    "restore_from_backup_file": "Restaurar desde un Archivo de Respaldo",
     "room": "Habitación",
-    "room_already_exists": "Room already exists",
+    "room_already_exists": "Esta habitación ya existe",
     "room_name": "Nombre de la habitación",
     "rooms": "Habitaciones",
     "rss": "RSS",
@@ -388,7 +388,7 @@
     "smtp_server_config": "Configuración del Servidor SMTP",
     "snapshot": "Snapshot",
     "snapshot_timer": "Snapshot Timer",
-    "source": "Video Source",
+    "source": "Fuente del Video",
     "source_info": "FFmpeg options on where to find and how to decode your camera's video stream. The most basic form is '-i' followed by your camera's URL.",
     "space_replace": "Space replace",
     "speaker_end_time": "Speaker end time",
@@ -400,24 +400,24 @@
     "start_end_message": "Y eso es todo. <br> ¡Disfruta de camera.ui!",
     "start_info_message": "Debes cambiar tus credenciales<br> antes de acceder a camera.ui",
     "status": "Estado",
-    "still_image_source": "Image Source",
-    "still_image_source_info": "If your camera also provides a URL for a still image, that can be defined here with the same syntax as 'source'. If not set, camera.ui will grab one frame from 'source'.",
+    "still_image_source": "Fuente de la Imagen",
+    "still_image_source_info": "Si su cámara también proporciona una URL para una imagen fija, se puede indicar aquí con la misma sintaxis que 'fuente'. Si no se indica, camera.ui tomará un fotograma como 'fuente'.",
     "stop": "Detener",
     "stream_timeout": "Stream Timeout",
     "sub_source_info": "Low Resolution Substream. FFmpeg options on where to find and how to decode your camera's video substream. The most basic form is '-i' followed by your camera's URL. The substream will be used to probe the stream or for motion detection through video analysis.",
     "successfull": "Successfull",
-    "successfully_added_camera": "Camera was added successfully",
-    "successfully_changed": "Successfully changed",
-    "successfully_created": "Successfully created",
-    "successfully_removed": "Successfully removed",
+    "successfully_added_camera": "Cámara añadida exitosamente",
+    "successfully_changed": "Se modificó exitosamente",
+    "successfully_created": "Se creó exitosamente",
+    "successfully_removed": "Se eliminó exitosamente",
     "sunday": "Domingo",
     "sunny": "Soleado",
     "system": "Sistema",
     "system_nav_info": "Manage the backend settings of camera.ui",
-    "system_restart_initiated": "System restart was initiated",
+    "system_restart_initiated": "Se inició con el reinicio del sistema",
     "system_successfully_restarted": "El sistema se reinició exitosamente",
     "system_successfully_updated": "El sistema se actualizó exitosamente",
-    "system_update_initiated": "System update was initiated",
+    "system_update_initiated": "Se inició la actualización del sistema",
     "telegram": "Telegram",
     "telegram_message_type": "Telegram Message Type",
     "telegram_type_not_editable": "Telegram cannot be changed for this camera.",
@@ -434,7 +434,7 @@
     "typ": "Typ",
     "unbridge_info": "Bridged cameras can cause slowdowns of the entire Homebridge instance. If unbridged, the camera will need to be added to HomeKit manually.",
     "undo": "Deshacer",
-    "up_to_date": "Up to date",
+    "up_to_date": "Actualizado",
     "update": "Actualizar",
     "update_available": "Actualización disponible",
     "update_or_downgrade": "Update/Downgrade",
@@ -443,23 +443,23 @@
     "use_interface_timer": "Interface Recording Timer",
     "use_interface_timer_info": "If enabled, the recording timer from camera.ui will be used for \"motionTimeout\".",
     "user": "Usuario",
-    "user_list": "User List",
+    "user_list": "Lista de Usuarios",
     "username": "Nombre de usuario",
     "username_already_exists": "Este nombre de usuario ya existe",
     "username_is_required": "Se requiere un nombre de usuario",
     "users": "Usuarios",
     "users_nav_info": "Eliminar usuarios existentes o crear nuevos",
-    "utilization": "Utilization",
+    "utilization": "Utilización",
     "verification_not_successfull": "Verification not successfull",
     "version": "Versión",
     "video": "Video",
-    "video_codec": "Video Codec",
+    "video_codec": "Codec de Video",
     "video_codec_info": "Set the codec used for encoding video sent to HomeKit, must be H.264-based. You can change to a hardware accelerated video codec with this option, if one is available (-vcodec).",
-    "video_filter": "Video filter",
+    "video_filter": "Filtro de Video",
     "video_filter_info": "Comma-delimited list of additional video filters for FFmpeg to run on the video. If 'none' is included, the default video filters are disabled (-filter:v).",
     "video_processor_config": "Video Prozessor Configuration",
     "video_processor_path": "Video Processor Path",
-    "video_resolution": "Video Resolution",
+    "video_resolution": "Resulución del Video",
     "videoanalysis": "Videoanalysis",
     "videoanalysis_info": "Activates Video Analysis for motion detection (a low resolution sub stream is preferred or prebuffering enabled)",
     "warning": "Aviso",
@@ -473,8 +473,8 @@
     "welcome_message": "Bienvenido a",
     "welcome_submessage": "La interfaz web para tus cámaras con soporte para RTSP",
     "widgets": "Widgets",
-    "width": "Video Width",
-    "width_info": "The width used for video stream.",
+    "width": "Ancho del Video",
+    "width_info": "El tamaño de ancho utilizado para la transmisión del video.",
     "yellow": "Amarillo"
   }
 }
